--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -31,6 +31,7 @@ services:
           - static.dev.gov.uk
           - support.dev.gov.uk
           - support-api.dev.gov.uk
+          - travel-advice-publisher.dev.gov.uk
           - whitehall-admin.dev.gov.uk
           - www-origin.dev.gov.uk
           - www.dev.gov.uk
