Add short-url-manager to services
This service hadn't made the list last time. Short URL Manager uses an
unconventional approach of creating a user in an initializer so doesn't
require the regular seed or User.create approach.

--- a/services/nginx-proxy/docker-compose.yml
+++ b/services/nginx-proxy/docker-compose.yml
@@ -49,6 +49,7 @@ services:
           - search-api.dev.gov.uk
           - search.dev.gov.uk
           - service-manual-frontend.dev.gov.uk
+          - short-url-manager.dev.gov.uk
           - signon.dev.gov.uk
           - smart-answers.dev.gov.uk
           - specialist-publisher.dev.gov.uk
