Add authenticating-proxy to services
This adds the authenticating-proxy app which can run in front of draft-router.
In order to run it against frontend apps they'll also need to be started
up as draft router doesn't have dependencies on them.

This resolves running authenticating-proxy in the default GDS SSO "mock"
mode. In order to run this with GDS SSO in "real" mode there needs to be
co-ordination between this authenticating-proxy and signon to share
oauth data, which was out of the scope of this change.

--- a/services/nginx-proxy/docker-compose.yml
+++ b/services/nginx-proxy/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       default:
         aliases:
           - asset-manager.dev.gov.uk
+          - authenticating-proxy.dev.gov.uk
           - calculators.dev.gov.uk
           - calendars.dev.gov.uk
           - collections-publisher.dev.gov.uk
