--- a/services/nginx-proxy/docker-compose.yml
+++ b/services/nginx-proxy/docker-compose.yml
@@ -56,6 +56,7 @@ services:
           - static.dev.gov.uk
           - support-api.dev.gov.uk
           - support.dev.gov.uk
+          - transition.dev.gov.uk
           - travel-advice-publisher.dev.gov.uk
           - whitehall-admin.dev.gov.uk
           - www-origin.dev.gov.uk
