--- a/services/transition/docker-compose.yml
+++ b/services/transition/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   transition-lite:
     <<: *transition
     depends_on:
+      - nginx-proxy-app
       - postgres
     environment:
       DATABASE_URL: "postgresql://postgres@postgres/transition"
@@ -22,6 +23,7 @@ services:
   transition-app: &transition-app
     <<: *transition
     depends_on:
+      - nginx-proxy-app
       - postgres
     environment:
       DATABASE_URL: "postgresql://postgres@postgres/transition"
