--- a/services/manuals-frontend/docker-compose.yml
+++ b/services/manuals-frontend/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - router-app
       - content-store-app
       - static-app
+      - nginx-proxy-app
     environment:
       GOVUK_ASSET_ROOT: manuals-frontend.dev.gov.uk
       VIRTUAL_HOST: manuals-frontend.dev.gov.uk
@@ -35,6 +36,7 @@ services:
       - router-app-draft
       - content-store-app-draft
       - static-app-draft
+      - nginx-proxy-app
     environment:
       GOVUK_ASSET_ROOT: draft-manuals-frontend.dev.gov.uk
       VIRTUAL_HOST: draft-manuals-frontend.dev.gov.uk
