--- a/services/calendars/docker-compose.yml
+++ b/services/calendars/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - router-app
       - content-store-app
       - static-app
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       GOVUK_ASSET_ROOT: calendars.dev.gov.uk
       VIRTUAL_HOST: calendars.dev.gov.uk
@@ -35,7 +35,7 @@ services:
       - router-app-draft
       - content-store-app-draft
       - static-app-draft
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       GOVUK_ASSET_ROOT: draft-calendars.dev.gov.uk
       VIRTUAL_HOST: draft-calendars.dev.gov.uk
@@ -50,7 +50,7 @@ services:
   calendars-app-live:
     <<: *calendars-app
     depends_on:
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       GOVUK_WEBSITE_ROOT: https://www.gov.uk
       PLEK_SERVICE_CONTENT_STORE_URI: https://www.gov.uk/api
