--- a/services/collections/docker-compose.yml
+++ b/services/collections/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - router-app
       - content-store-app
       - static-app
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       GOVUK_ASSET_ROOT: collections.dev.gov.uk
       VIRTUAL_HOST: collections.dev.gov.uk
@@ -38,7 +38,7 @@ services:
       - router-app-draft
       - content-store-app-draft
       - static-app-draft
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       GOVUK_ASSET_ROOT: draft-collections.dev.gov.uk
       VIRTUAL_HOST: draft-collections.dev.gov.uk
@@ -48,7 +48,7 @@ services:
   collections-app-live:
     <<: *collections-app
     depends_on:
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       GOVUK_WEBSITE_ROOT: https://www.gov.uk
       PLEK_SERVICE_CONTENT_STORE_URI: https://www.gov.uk/api
