--- a/services/content-publisher/docker-compose.yml
+++ b/services/content-publisher/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - redis
       - publishing-api-app
       - asset-manager-app
-      - nginx-proxy-app
+      - nginx-proxy
       - content-store-app
     environment:
       DATABASE_URL: "postgresql://postgres@postgres/content-publisher"
@@ -48,7 +48,7 @@ services:
       - content-publisher-worker
       - publishing-api-app-e2e
       - asset-manager-app-e2e
-      - nginx-proxy-app
+      - nginx-proxy
 
   content-publisher-worker:
     <<: *content-publisher
