--- a/services/content-store/docker-compose.yml
+++ b/services/content-store/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     depends_on:
       - mongo
       - router-api-app
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       MONGODB_URI: "mongodb://mongo/content-store"
       VIRTUAL_HOST: content-store.dev.gov.uk
@@ -38,7 +38,7 @@ services:
     depends_on:
       - mongo
       - router-api-app-draft
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       PLEK_HOSTNAME_PREFIX: "draft-"
       MONGODB_URI: "mongodb://mongo/draft-content-store"
