--- a/services/publishing-api/docker-compose.yml
+++ b/services/publishing-api/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     depends_on:
       - postgres
       - redis
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       DATABASE_URL: "postgresql://postgres@postgres/publishing-api"
       REDIS_URL: redis://redis
@@ -45,7 +45,7 @@ services:
     depends_on:
       - postgres
       - redis
-      - nginx-proxy-app
+      - nginx-proxy
       - publishing-api-worker
 
   publishing-api-worker:
