--- a/services/router-api/docker-compose.yml
+++ b/services/router-api/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     depends_on:
       - mongo
       - router-app
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       ROUTER_NODES: router-app:3055
       MONGODB_URI: "mongodb://mongo/router"
@@ -39,7 +39,7 @@ services:
     depends_on:
       - mongo
       - router-app-draft
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       ROUTER_NODES: router-app-draft:3055
       MONGODB_URI: "mongodb://mongo/draft-router"
