--- a/services/static/docker-compose.yml
+++ b/services/static/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     <<: *static
     depends_on:
       - redis
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       REDIS_URL: redis://redis
       GOVUK_ASSET_ROOT: static.dev.gov.uk
@@ -32,7 +32,7 @@ services:
     <<: *static-app
     depends_on:
       - redis
-      - nginx-proxy-app
+      - nginx-proxy
     environment:
       REDIS_URL: redis://redis
       GOVUK_ASSET_ROOT: draft-static.dev.gov.uk
