--- a/services/support/docker-compose.yml
+++ b/services/support/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     <<: *support
     depends_on:
       - redis
-      - nginx-proxy-app
+      - nginx-proxy
       - support-api-app
     environment:
       VIRTUAL_HOST: support.dev.gov.uk
