--- a/services/whitehall/docker-compose.yml
+++ b/services/whitehall/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - mysql
       - redis
       - static-app
-      - nginx-proxy-app
+      - nginx-proxy
       - asset-manager-app
       - publishing-api-app
     environment:
@@ -48,6 +48,6 @@ services:
       - mysql
       - redis
       - static-app
-      - nginx-proxy-app
+      - nginx-proxy
       - asset-manager-app-e2e
       - publishing-api-app-e2e
