--- a/services/collections-publisher/docker-compose.yml
+++ b/services/collections-publisher/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - redis
       - content-store-app
       - link-checker-api-app
-      - nginx-proxy-app
+      - nginx-proxy
       - publishing-api-app
     environment:
       DATABASE_URL: "mysql2://root:root@mysql/collections_publisher_development"
@@ -59,5 +59,5 @@ services:
       - mysql
       - content-store-app
       - link-checker-api-app
-      - nginx-proxy-app
+      - nginx-proxy
       - collections-publisher-worker
