--- a/services/content-tagger/docker-compose.yml
+++ b/services/content-tagger/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     depends_on:
       - postgres
       - publishing-api-app
-      - nginx-proxy-app
+      - nginx-proxy
       - redis
     environment:
       DATABASE_URL: "postgresql://postgres@postgres/content-tagger"
