--- a/services/router/docker-compose.yml
+++ b/services/router/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     <<: *router
     depends_on:
       - mongo
-      - nginx-proxy-app
+      - nginx-proxy
     ports:
       - "8080"
       - "3055"
