--- a/services/calendars/docker-compose.yml
+++ b/services/calendars/docker-compose.yml
@@ -5,6 +5,8 @@ x-calendars: &calendars
     context: .
     dockerfile: Dockerfile.govuk-base
   image: calendars
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
