--- a/services/search-admin/docker-compose.yml
+++ b/services/search-admin/docker-compose.yml
@@ -5,6 +5,8 @@ x-search-admin: &search-admin-base
     context: .
     dockerfile: Dockerfile.govuk-base
   image: search-admin
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
