--- a/services/signon/docker-compose.yml
+++ b/services/signon/docker-compose.yml
@@ -5,6 +5,8 @@ x-signon: &signon
     context: .
     dockerfile: Dockerfile.govuk-base
   image: signon
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
