--- a/services/asset-manager/docker-compose.yml
+++ b/services/asset-manager/docker-compose.yml
@@ -5,6 +5,8 @@ x-asset-manager: &asset-manager
     context: .
     dockerfile: services/asset-manager/Dockerfile
   image: asset-manager
+  tty: true
+  stdin_open: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
