--- a/services/calculators/docker-compose.yml
+++ b/services/calculators/docker-compose.yml
@@ -5,6 +5,8 @@ x-calculators: &calculators
     context: .
     dockerfile: Dockerfile.govuk-base
   image: calculators
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
