--- a/services/collections/docker-compose.yml
+++ b/services/collections/docker-compose.yml
@@ -5,6 +5,8 @@ x-collections: &collections
     context: .
     dockerfile: Dockerfile.govuk-base
   image: collections
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
