--- a/services/content-data-admin/docker-compose.yml
+++ b/services/content-data-admin/docker-compose.yml
@@ -5,6 +5,8 @@ x-content-data-admin: &content-data-admin
     context: .
     dockerfile: Dockerfile.govuk-base
   image: content-data-admin
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
