--- a/services/content-store/docker-compose.yml
+++ b/services/content-store/docker-compose.yml
@@ -5,6 +5,8 @@ x-content-store: &content-store
     context: .
     dockerfile: Dockerfile.govuk-base
   image: content-store
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
