--- a/services/email-alert-frontend/docker-compose.yml
+++ b/services/email-alert-frontend/docker-compose.yml
@@ -5,6 +5,8 @@ x-email-alert-frontend: &email-alert-frontend
     context: .
     dockerfile: Dockerfile.govuk-base
   image: email-alert-frontend
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
