--- a/services/licence-finder/docker-compose.yml
+++ b/services/licence-finder/docker-compose.yml
@@ -5,6 +5,8 @@ x-licence-finder: &licence-finder
     context: .
     dockerfile: Dockerfile.govuk-base
   image: licence-finder
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
