--- a/services/link-checker-api/docker-compose.yml
+++ b/services/link-checker-api/docker-compose.yml
@@ -5,6 +5,8 @@ x-link-checker-api: &link-checker-api
     context: .
     dockerfile: Dockerfile.govuk-base
   image: link-checker-api
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
