--- a/services/manuals-frontend/docker-compose.yml
+++ b/services/manuals-frontend/docker-compose.yml
@@ -5,6 +5,8 @@ x-manuals-frontend: &manuals-frontend
     context: .
     dockerfile: Dockerfile.govuk-base
   image: manuals-frontend
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
