--- a/services/publisher/docker-compose.yml
+++ b/services/publisher/docker-compose.yml
@@ -5,6 +5,8 @@ x-publisher: &publisher
     context: .
     dockerfile: Dockerfile.govuk-base
   image: publisher
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
