--- a/services/publishing-api/docker-compose.yml
+++ b/services/publishing-api/docker-compose.yml
@@ -5,6 +5,8 @@ x-publishing-api: &publishing-api
     context: .
     dockerfile: Dockerfile.govuk-base
   image: publishing-api
+  tty: true
+  stdin_open: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
