--- a/services/search-api/docker-compose.yml
+++ b/services/search-api/docker-compose.yml
@@ -5,6 +5,8 @@ x-search-api: &search-api
     context: .
     dockerfile: Dockerfile.govuk-base
   image: search-api
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
