--- a/services/short-url-manager/docker-compose.yml
+++ b/services/short-url-manager/docker-compose.yml
@@ -5,6 +5,8 @@ x-short-url-manager: &short-url-manager
     context: .
     dockerfile: Dockerfile.govuk-base
   image: short-url-manager
+  stdin_open: true
+  tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - home:/home/build
