Replace govuk-lint with rubocop-govuk
As govuk-lint is being deprecated, this commit replaces usage of
govuk-lint with rubocop and rubocop-govuk.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,6 @@
 inherit_gem:
-  govuk-lint: "configs/rubocop/all.yml"
-
-Rails:
-  Enabled: false
+  rubocop-govuk: 
+    - "config/default.yml"
 
 AllCops:
   Exclude:
