--- a/projects/govuk_publishing_components/docker-compose.yml
+++ b/projects/govuk_publishing_components/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.7'
 
+volumes:
+  govuk_publishing_components_tmp:
+  govuk_publishing_components_node_modules:
+
 x-govuk_publishing_components: &govuk_publishing_components
   build:
     context: .
@@ -7,7 +11,9 @@ x-govuk_publishing_components: &govuk_publishing_components
   image: govuk_publishing_components
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
-    - home:/home/build
+    - root:/root
+    - govuk_publishing_components_tmp:/govuk/govuk_publishing_components/spec/dummy/tmp
+    - govuk_publishing_components_node_modules:/govuk/govuk_publishing_components/node_modules
   working_dir: /govuk/govuk_publishing_components
 
 services:
