--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,12 @@ volumes:
   mongo:
   go:
   elasticsearch6:
+  govuk-nfs:
+    driver: local
+    driver_opts:
+      type: nfs
+      o: addr=host.docker.internal,rw,nolock,hard,nointr,nfsvers=3
+      device: ":${HOME}/govuk"
 
 services:
   postgres:
