--- a/projects/content-publisher/docker-compose.yml
+++ b/projects/content-publisher/docker-compose.yml
@@ -8,7 +8,7 @@ x-content-publisher: &content-publisher
   stdin_open: true
   tty: true
   volumes:
-    - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
+    - govuk-nfs:/govuk
     - home:/home/build
   working_dir: /govuk/content-publisher
 
