--- a/projects/govuk_publishing_components/docker-compose.yml
+++ b/projects/govuk_publishing_components/docker-compose.yml
@@ -6,7 +6,7 @@ x-govuk_publishing_components: &govuk_publishing_components
     dockerfile: Dockerfile.govuk-base
   image: govuk_publishing_components
   volumes:
-    - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
+    - govuk-nfs:/govuk
     - home:/home/build
   working_dir: /govuk/govuk_publishing_components
 
